Bug 410506 - "Run in Terminal" and "Terminal=true" ignored for default email client
Summary: "Run in Terminal" and "Terminal=true" ignored for default email client
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_componentchooser (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2019-08-02 03:07 UTC by Matti Klock
Modified: 2020-01-14 16:53 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.67
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matti Klock 2019-08-02 03:07:39 UTC
STEPS TO REPRODUCE
1. Open Default Applications -> Email Client
2. Select mutt
3. Run 'kioclient5 exec mailto:x@y.com'  (or click a mailto link in Firefox, etc.)

OBSERVED RESULT
an empty mail is sent to x@y.com; no terminal opens

EXPECTED RESULT
Terminal opens running 'mutt x@y.com', which puts you in the mutt composer

SOFTWARE/OS VERSIONS
Operating System: Kubuntu 19.04
KDE Plasma Version: 5.15.4
KDE Frameworks Version: 5.56.0
Qt Version: 5.12.2
Kernel Version: 5.0.0-20-generic
OS Type: 64-bit

ADDITIONAL INFORMATION
- This seems to be related to bug 292606 comment 20.

- It seems like kio (or whatever handles calling the right application) correctly picks up that mailto should be handled with mutt, but then ignores the Terminal directives from both mutt.desktop and .config/emaildefaults.

Here's some info from my system.

/usr/share/applications/mutt.desktop (installed with mutt)
===============
[Desktop Entry]
Categories=Office;Network;Email;
Comment=Simple text-based Mail User Agent
Comment[de]=Einfaches, Text-basiertes Mailprogramm
Exec=mutt %u
Icon=mutt
Name=mutt
Name[de]=Mutt
MimeType=x-scheme-handler/mailto;
NoDisplay=false
Terminal=true
Type=Application
================

.config/emaildefaults (generated by Component Chooser)
=================
[Defaults]
Profile=Default

[PROFILE_Default]
EmailAddress=
EmailClient[$e]=mutt
<elided>
TerminalClient=true
===================

.config/mimeapps.list includes this line:
===========
x-scheme-handler/mailto=mutt.desktop
===========



- Running just 'kioclient5 exec /usr/share/applications/mutt.desktop' works fine.  First it pops up a dialog asking if I want to run 'mutt %u', then launches mutt in a terminal.  Same goes for clicking on the .desktop shortcut.  It's using mailto: links that breaks.




- In the end, I was able to work around this issue by editing /usr/share/applications/mutt.desktop:

set 'Exec=konsole -e mutt %u'
comment out 'Terminal=true'

Now mailto links in kioclient5, Firefox, and Pidgin work fine.
Comment 1 Nate Graham 2019-08-05 03:38:51 UTC
So basically it's ignoring the "Run in Terminal" checkbox, right?
Comment 2 Matti Klock 2019-08-11 21:35:47 UTC
Yes.

It's also ignoring "Terminal=true" in the .desktop file.  Setting a shortcut in "Global Shortcuts" for mutt.desktop didn't work either until I edited it as above.
Comment 3 Nate Graham 2019-08-11 21:39:04 UTC
Darn. Confirmed.