Allow to handle apps with Terminal=True in their desktop file, handle their associated mimetype properly

Summary:
The Terminal field in .desktop file was not taken into account as the desktop was only used to get an Exec line.
Also the supported protocols was missing x-scheme-handler declared protocols.

BUG:410506
FIXED-IN:5.67

Test Plan:
Install mutt
Set mutt as default mail client in kcmshell5 componentchooser
kioclient5  exec mailto:test@test.com

Mutt is opened in default terminal application.

Reviewers: ervin, ngraham, #frameworks, dfaure

Reviewed By: dfaure

Subscribers: dfaure, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D26557